# bce-eclipses

./: .gitattributes  .gitignore  README.md  api.key  pyproject.toml  service_account.json
bce_eclipses/: main.py
secrets/: auth.json
tests/: test_bce_eclipses.py
